feat: Flutter migration Phase 5 - Desktop production setup
- Add Flutter desktop app (forestech_app/) with Clean Architecture
- Update GitHub Actions workflow for Flutter builds (Windows + Linux)
- Add auto-update service replicating electron-updater functionality
- Add UpdateProvider and UpdateDialog widgets
- Configure flutter_launcher_icons for desktop platforms
- Add production build scripts and documentation
- Update FLUTTER_MIGRATION_ROADMAP.md